deploy/k8s/apps/chunker/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: chunker-netpol
spec:
  endpointSelector:
    matchLabels:
      app: chunker
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toFQDNs:
    - matchPattern: "*.s3.*.amazonaws.com"
    - matchPattern: "*.sqs.*.amazonaws.com"
    - matchPattern: "sqs.*.amazonaws.com"
    - matchPattern: "huggingface.co"
    - matchPattern: "*.huggingface.co"
    - matchPattern: "*.hf.co"
    - matchPattern: "hf.co"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toCIDR:
    - 169.254.170.23/32
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
